--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "jam_mai_2022"]
 	path = jam_mai_2022
 	url = https://gitlab.com/gagoi_/jam_mai_2022
+[submodule "GameJam-14-05"]
+	path = GameJam-14-05
+	url = https://github.com/Axpronnier/GameJam-14-05
